# channels

./: .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-travis.txt  setup.py  utils.py
channels/: __init__.py  channel.py  poller.py  testing.py
tests/: lines_test.py  pipe_endpoint_test.py  poller_test.py  socket_endpoint_test.py  test_lines.py  test_poller.py  test_socket_endpoint.py  test_test_channel.py  unix_sock_test.py
