[tool.poetry]
name = "yet-another-io-channels-library"
version = "0.2.4.post1"
description = "Simple IO channels library"
authors = ["Ilya Konovalov <aragaer@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
         {include = "channels"}
]

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.group.dev.dependencies]
nose2 = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
